<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.wemirr</groupId>
        <artifactId>wemirr-platform-dependencies</artifactId>
        <version>4.0.0-SNAPSHOT</version>
    </parent>

    <groupId>com.wemirr.framework</groupId>
    <artifactId>wemirr-platform-framework</artifactId>
    <version>4.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>${project.artifactId}</name>
    <description>平台框架模块聚合，提供通用组件、数据库、缓存、安全认证等基础能力</description>

    <modules>
        <!-- 核心模块 -->
        <module>common-framework-core</module>
        <module>common-spring-boot-starter</module>

        <!-- 数据层 -->
        <module>db-spring-boot-starter</module>
        <module>redis-plus-spring-boot-starter</module>
        <module>mongodb-plus-spring-boot-starter</module>

        <!-- 安全认证 -->
        <module>security-spring-boot-starter</module>

        <!-- 微服务 -->
        <module>feign-plugin-spring-boot-starter</module>

        <!-- 国际化 -->
        <module>i18n-spring-boot-starter</module>

        <!-- 通信 -->
        <module>websocket-spring-boot-starter</module>
        <module>robot-spring-boot-starter</module>

        <!-- 工具 -->
        <module>diff-log-spring-boot-starter</module>
        <module>easyexcel-spring-boot-starter</module>
        <module>pdf-spring-boot-starter</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <skipTests>true</skipTests>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-properties-migrator</artifactId>
            <scope>runtime</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
